# ricardoboix-static

./: README.md  estilo.css  extract.py  generate.py  librodevisitas.md  pyproject.toml
.github/workflows/: publish.yml
poemas/: A la luna.md  Amor fugaz.md  Bandoneón errante.md  Besos locos.md  Besos olvidados.md  Campanas.md  Canto a la libertad.md  Carnaval.md  Carta a una desconocida.md  Celos.md  Con catorce años.md  De bronce.md  El beso.md  El cantor.md  El delantal.md  El herrero.md  El jardín.md  El mendigo.md  El olvido.md  El poeta y el perro.md  El primer amor.md  El río.md  El viejo roble.md  Estrellas fugaces.md  Felicidades, Princesa.md  Gracias.md  La búsqueda.md  La caída.md  La chimenea.md  La chopera.md  La espera.md  La fuente.md  La gata.md  La lejanía.md  La luna y la niña.md  La muñeca.md  La noche.md  La noria.md  La tormenta.md  La zagala.md  (+7 more)
relatos_md/: Aventuras y desventuras de un niño en la Guerra Civil Española.md  El ladrón.md  Rene.md
