[tool.poetry]
name = "ricardoboix-static"
version = "0.1.0"
description = ""
authors = ["alex <alex@pdp7.net>"]
readme = "README.md"
packages = [{include = "ricardoboix_static"}]

[tool.poetry.dependencies]
python = "^3.9"
htmlgenerator = "^1.2.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
